--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -18,18 +18,14 @@
 					<h2>Instructions</h2>
 						<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
 					<h2>This is probably the best game in the world. Fact.</h2>
-						<div>
-							<img src="images/back.png" alt"Quenn of Diamonds">
-							<img src="images/back.png" alt"Queen of Hearts">
-							<img src="images/back.png" alt"King of Diamonds">
-							<img src="images/back.png" alt"King of Hearts">
+	
+						<div id="game-board" class="board clearfix">
 						</div>
-				
+
+					<button type="button">Reset</button>
 				</main>
 							<footer class="clearfix">
-								<!-- <a href="https://www.facebook.com/wilson.espina">Facebook</a>
-								<a href="https://www.instagram.com/wilson.espina/">Instagram</a>
-								<a href="https://twitter.com/Wilson_Espina">Twitter</a> -->
+			
 
 								<p class="copyright">Copyright 2017</p>
 								<p class="message">Created with &hearts; by <span class="name">GA</span></p>
